# md-mermaid-checker

./: .gitignore  LICENSE  README.md  architecture.md  pyproject.toml
src/md_mermaid_checker/: __init__.py  cli.py
