[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-mermaid-checker"
version = "0.1.0"
description = "A tool for validating Mermaid.js diagrams embedded in Markdown files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["mermaid", "markdown", "validation", "linting", "diagrams"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/yourusername/md-mermaid-checker"
Repository = "https://github.com/yourusername/md-mermaid-checker.git"
Issues = "https://github.com/yourusername/md-mermaid-checker/issues"

[project.scripts]
md-mermaid-checker = "md_mermaid_checker.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/md_mermaid_checker"]